[gd_scene load_steps=2 format=3 uid="uid://bbp03ks4uycri"]

[ext_resource type="Script" uid="uid://cnb0dvu65pxs4" path="res://Scenes/Endings/GoodEnding.gd" id="1_nlnts"]

[node name="GoodEnding" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nlnts")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"
